--- a/src/style/Landing.css
+++ b/src/style/Landing.css
@@ -11,8 +11,6 @@
 
 .landing-item img{
     width: 350px;
-    /* width: 100%;
-    max-width: 650px; */
 }
 
 .landing-text{
